--- a/R/2024-06-05_O2A_seminar/Slides.html
+++ b/R/2024-06-05_O2A_seminar/Slides.html
@@ -428,11 +428,13 @@ repository</li>
 <div id="dealing-with-common-issues-continued" class="slide section level2">
 <h1>Dealing with common issues (continued)</h1>
 <ul>
-<li>Feature with abbreviations (Threatened status)</li>
+<li>Replace abbreviations</li>
 <li>Species column with misspelled species names</li>
 <li>Parameter names (table headers)</li>
 <li>Parameter with unit, that needs rescaling</li>
 <li>Unrealistically high number of decimal points</li>
+<li>URL check</li>
+<li>Add a column</li>
 <li>Save table</li>
 </ul>
 </div>
